--- a/style.css
+++ b/style.css
@@ -1,213 +1,78 @@
-:root {
-  --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-    "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-    "Source Han Sans CN", sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.main-container {
-  overflow: hidden;
+body {
+    background: #343541;
+    color: #ECECF1;
+    font-family: 'Inter', sans-serif;
 }
 
-.main-container,
-.main-container * {
-  box-sizing: border-box;
+h1 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 100px;
 }
 
-input,
-select,
-textarea,
-button {
-  outline: 0;
+body>p {
+    width: 600px;
+    margin: 50px auto;
+    line-height: 170%;
+    text-align: center;
+    color: #b5b5bc;
 }
 
-.main-container {
-  position: relative;
-  width: 1920px;
-  height: 1080px;
-  margin: 0 auto;
-  background: #ffffff;
-  overflow: hidden;
+#messages {
+    width: 700px;
+    margin: 0 auto;
+    max-height: 600px;
+    overflow-y: auto;
+    margin-bottom: 220px;
 }
-.rectangle {
-  position: relative;
-  width: 275px;
-  height: 96px;
-  margin: 0 0 0 0;
-  background: #d9d9d9;
-  z-index: 1;
+
+#messages::-webkit-scrollbar {
+    width: 5px
 }
-.logo {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 42px;
-  top: 30px;
-  left: 31px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 35px;
-  font-weight: 400;
-  line-height: 42px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 1;
+
+#messages::-webkit-scrollbar-track {
+    background: #575a6c;
 }
-.flex-row-a {
-  position: relative;
-  width: 1270px;
-  height: 910px;
-  margin: 18px 0 0 0;
-  z-index: 12;
+
+#messages::-webkit-scrollbar-thumb {
+    background: #17181e
 }
-.rectangle-1 {
-  position: absolute;
-  width: 275px;
-  height: 910px;
-  top: 0;
-  left: 0;
-  background: #d9d9d9;
-  z-index: 2;
+
+#messages::-webkit-scrollbar-thumb:hover {
+    background: #d26565
 }
-.rectangle-2 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 586px;
-  left: 320px;
-  background: #d9d9d9;
-  z-index: 9;
-  border-radius: 25px;
+
+
+form {
+    position: fixed;
+    bottom: 100px;
+    width: 100%;
+    text-align: center;
 }
-.python-script {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 17px;
-  left: 28px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 10;
+
+form input {
+    background: #40414F;
+    border-radius: 5px;
+    padding: 15px 20px;
+    font-family: 'Inter', sans-serif;
+    border: 1px solid transparent;
+    color: #ECECF1;
+    outline: none;
+    width: 500px;
+    height: 40px;
 }
-.button {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 586px;
-  left: 824px;
-  cursor: pointer;
-  background: #d9d9d9;
-  border: none;
-  z-index: 8;
-  border-radius: 25px;
+
+form input:focus {
+    border-color: #d26565;
 }
-.create-workout-plan {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 17px;
-  left: 26px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 11;
-}
-.rectangle-3 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 677px;
-  left: 320px;
-  background: #d9d9d9;
-  z-index: 6;
-  border-radius: 25px;
-}
-.write-text {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 18px;
-  left: 28px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 7;
-}
-.rectangle-4 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 677px;
-  left: 824px;
-  cursor: pointer;
-  background: #d9d9d9;
-  border: none;
-  z-index: 12;
-  border-radius: 25px;
-}
-.fun-fact {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 18px;
-  left: 26px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 13;
-}
-.rectangle-5 {
-  position: absolute;
-  width: 844px;
-  height: 61px;
-  top: 826px;
-  left: 320px;
-  cursor: pointer;
-  background: #d9d9d9;
-  border: none;
-  z-index: 4;
-  border-radius: 75px;
-}
-.enter-something {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 58px;
-  top: 829px;
-  left: 350px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 45px;
-  font-weight: 400;
-  line-height: 54.46px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 5;
+
+form input::-webkit-input-placeholder {
+    color: #6c6e83;
 }
