--- a/style.css
+++ b/style.css
@@ -1,213 +1,89 @@
-:root {
-  --default-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Ubuntu, "Helvetica Neue", Helvetica, Arial, "PingFang SC",
-    "Hiragino Sans GB", "Microsoft Yahei UI", "Microsoft Yahei",
-    "Source Han Sans CN", sans-serif;
-}
 
-.main-container {
-  overflow: hidden;
-}
-
-.main-container,
-.main-container * {
-  box-sizing: border-box;
-}
-
-input,
-select,
-textarea,
-button {
-  outline: 0;
-}
-
-.main-container {
-  position: relative;
-  width: 1920px;
-  height: 1080px;
-  margin: 0 auto;
-  background: #ffffff;
-  overflow: hidden;
-}
-.rectangle {
-  position: relative;
-  width: 275px;
-  height: 96px;
-  margin: 0 0 0 0;
-  background: #d9d9d9;
-  z-index: 1;
-}
-.logo {
+body {
+  font-family: Arial, sans-serif;
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 42px;
-  top: 30px;
-  left: 31px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 35px;
-  font-weight: 400;
-  line-height: 42px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 1;
+  height: 100vh;
+  margin: 0;
 }
-.flex-row-a {
+.container {
+  display: flex;
+  width: 100%;
+}
+.image-section, .form-section {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  width: 1270px;
-  height: 910px;
-  margin: 18px 0 0 0;
-  z-index: 12;
 }
-.rectangle-1 {
+.image-section img {
   position: absolute;
-  width: 275px;
-  height: 910px;
   top: 0;
   left: 0;
-  background: #d9d9d9;
-  z-index: 2;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-.rectangle-2 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 586px;
-  left: 320px;
-  background: #d9d9d9;
-  z-index: 9;
-  border-radius: 25px;
+.form-section {
+  background-color: #f4f4f4;
+  box-shadow: 20px ;
 }
-.python-script {
+.form-container {
+  width: 80%;
+  max-width: 400px;
+  z-index: 1;
+}
+form {
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 17px;
-  left: 28px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 10;
+  flex-direction: column;
 }
-.button {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 586px;
-  left: 824px;
-  cursor: pointer;
-  background: #d9d9d9;
+form input {
+  margin: 10px 0;
+  padding: 10px;
+  font-size: 16px;
+}
+form button {
+  padding: 10px;
+  font-size: 16px;
+  background-color: #5cb85c;
+  color: white;
   border: none;
-  z-index: 8;
-  border-radius: 25px;
-}
-.create-workout-plan {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 17px;
-  left: 26px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 11;
-}
-.rectangle-3 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 677px;
-  left: 320px;
-  background: #d9d9d9;
-  z-index: 6;
-  border-radius: 25px;
-}
-.write-text {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 18px;
-  left: 28px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 7;
-}
-.rectangle-4 {
-  position: absolute;
-  width: 446px;
-  height: 65px;
-  top: 677px;
-  left: 824px;
   cursor: pointer;
-  background: #d9d9d9;
+}
+form button:hover {
+  background-color: #4cae4c;
+}
+
+
+.span-docl {
+  color: blue;
+  cursor:pointer
+}
+
+.footer-container {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  display: flex;
+  justify-content:flex-end;
+  
+}
+
+.text-docl {
+  margin: 0;
+}
+
+.button2 {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: gray;
+  color: white;
   border: none;
-  z-index: 12;
   border-radius: 25px;
-}
-.fun-fact {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 30px;
-  top: 18px;
-  left: 26px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 25px;
-  font-weight: 400;
-  line-height: 30px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 13;
-}
-.rectangle-5 {
-  position: absolute;
-  width: 844px;
-  height: 61px;
-  top: 826px;
-  left: 320px;
   cursor: pointer;
-  background: #d9d9d9;
-  border: none;
-  z-index: 4;
-  border-radius: 75px;
+  font-size: 16px;
 }
-.enter-something {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: absolute;
-  height: 58px;
-  top: 829px;
-  left: 350px;
-  color: #000000;
-  font-family: Inter, var(--default-font-family);
-  font-size: 45px;
-  font-weight: 400;
-  line-height: 54.46px;
-  text-align: left;
-  white-space: nowrap;
-  z-index: 5;
+
+.button2:hover {
+  background-color: blue;
 }
